chore: update author

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "lvccc"
 version = "0.6.0"
 description = ""
-authors = [{ name = "Zhuo Tan", email = "tz23@mails.tsinghua.edu.cn" }]
+authors = [{ name = "Lumina", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["pydantic", "opencv-python-headless", "matplotlib", 'xxhash']
 requires-python = ">=3.10,<3.13"
 readme = "README.md"
