--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lvccc"
-version = "0.7.0a1"
+version = "0.7.0"
 description = ""
 authors = [{ name = "Lumina", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["pydantic", "pillow", "matplotlib", 'xxhash']
