chore: update configs

--- a/config/default.toml
+++ b/config/default.toml
@@ -29,6 +29,9 @@ rlc = "RLC40"
 "NagoyaOrigami" = 0
 "Tunnel_Train" = 0
 "TempleBoatGiantR32" = 0
+"UnicornLinearCam" = 0
+"Boxer-IrishMan-Gladiator" = 0
+"ChessPieces-MovingCamera" = 0
 "Boys" = 1
 "Motherboard" = 1
 "MiniGarden" = 1
