--- a/config/NagoyaFujita/param.cfg
+++ b/config/NagoyaFujita/param.cfg
@@ -1,7 +1,4 @@
 pipeline                0
 height                  2048
 width                   2048
-upsample                2
-patternSize             0.300
-gradientBlendingWidth   0.900
-psizeShortcutThreshold  2
+psizeInflate            1.7320508075688772
