--- a/config/TempleBoatGiantR32/param.cfg
+++ b/config/TempleBoatGiantR32/param.cfg
@@ -1,7 +1,4 @@
 pipeline                0
 height                  4852
 width                   6464
-upsample                2
-patternSize             0.300
-gradientBlendingWidth   0.900
-psizeShortcutThreshold  2
+psizeInflate            1.7320508075688772
