--- a/config/UnicornLinearCam/param.cfg
+++ b/config/UnicornLinearCam/param.cfg
@@ -1,7 +1,4 @@
 pipeline                0
 height                  2160
 width                   3840
-upsample                2
-patternSize             0.300
-gradientBlendingWidth   0.900
-psizeShortcutThreshold  2
+psizeInflate            1.7320508075688772
