--- a/config/NagoyaOrigami/param.cfg
+++ b/config/NagoyaOrigami/param.cfg
@@ -2,3 +2,4 @@ pipeline                0
 height                  2048
 width                   2048
 psizeInflate            1.7320508075688772
+patternSize             0.3
