--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["lvccc"]
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = ["pytest"]
 
