--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ name = "lvccc"
 version = "0.7.1"
 description = ""
 authors = [{ name = "Lumina", email = "tz23@mails.tsinghua.edu.cn" }]
-dependencies = ["pydantic", "pillow", "matplotlib", 'xxhash']
-requires-python = ">=3.10,<3.13"
+dependencies = ["pydantic", "pillow", "matplotlib", "xxhash"]
+requires-python = ">=3.10,<3.14"
 readme = "README.md"
 license = { text = "MIT" }
 
