chore: update TSPC configs

--- a/config/Boys/param.cfg
+++ b/config/Boys/param.cfg
@@ -2,3 +2,4 @@ pipeline                1
 height                  2956
 width                   3976
 patternSize             0.325
+psizeInflate            2.598076211353316
