--- a/config/Motherboard/param.cfg
+++ b/config/Motherboard/param.cfg
@@ -2,3 +2,4 @@ pipeline                1
 height                  3064
 width                   4038
 patternSize             0.325
+psizeInflate            2.598076211353316
