--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "lvccc"
 version = "0.7.1"
 description = ""
 authors = [{ name = "Lumina", email = "tz23@mails.tsinghua.edu.cn" }]
-dependencies = ["pydantic", "pillow", "matplotlib", "xxhash"]
+dependencies = ["pillow", "matplotlib", "xxhash"]
 requires-python = ">=3.10,<3.14"
 readme = "README.md"
 license = { text = "MIT" }
