--- a/config/Boxer-IrishMan-Gladiator/param.cfg
+++ b/config/Boxer-IrishMan-Gladiator/param.cfg
@@ -2,3 +2,4 @@ pipeline                0
 height                  2160
 width                   3840
 patternSize             0.3
+psizeInflate            2.15
