--- a/config/TempleBoatGiantR32/param.cfg
+++ b/config/TempleBoatGiantR32/param.cfg
@@ -2,3 +2,4 @@ pipeline                0
 height                  4852
 width                   6464
 patternSize             0.3
+psizeInflate            2.15
