--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "lvccc"
-version = "0.7.1"
-description = ""
+version = "0.7.2a1"
+description = "A crosscheck framework designed for LVC"
 authors = [{ name = "Lumina", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["pillow", "matplotlib", "xxhash"]
 requires-python = ">=3.10,<3.14"
