--- a/config/ChessPieces-MovingCamera/param.cfg
+++ b/config/ChessPieces-MovingCamera/param.cfg
@@ -3,3 +3,4 @@ height                  2160
 width                   3840
 patternSize             0.3
 maxPsize                0.3
+psizeInflate            2.15
