--- a/config/Boxer-IrishMan-Gladiator/param.cfg
+++ b/config/Boxer-IrishMan-Gladiator/param.cfg
@@ -1,5 +1,6 @@
 pipeline                0
 height                  2160
 width                   3840
-patternSize             0.3
 psizeInflate            2.15
+patternSize             0.3
+maxPsize                0.38
