--- a/config/Boys/param.cfg
+++ b/config/Boys/param.cfg
@@ -2,4 +2,6 @@ pipeline                1
 height                  2956
 width                   3976
 patternSize             0.325
-psizeInflate            2.598076211353316
+psizeInflate            2.598
+patternSize             0.325
+maxPsize                0.31
