--- a/config/MiniGarden/param.cfg
+++ b/config/MiniGarden/param.cfg
@@ -1,5 +1,6 @@
 pipeline                1
 height                  3064
 width                   4038
+psizeInflate            2.598
 patternSize             0.325
-psizeInflate            2.598076211353316
+maxPsize                0.31
