--- a/config/NagoyaFujita/param.cfg
+++ b/config/NagoyaFujita/param.cfg
@@ -1,6 +1,7 @@
 pipeline                0
 height                  2048
 width                   2048
-patternSize             0.3
 upsample                3
 psizeInflate            2.15
+patternSize             0.3
+maxPsize                0.38
