--- a/config/TempleBoatGiantR32/param.cfg
+++ b/config/TempleBoatGiantR32/param.cfg
@@ -1,5 +1,6 @@
 pipeline                0
 height                  4852
 width                   6464
-patternSize             0.3
 psizeInflate            2.15
+patternSize             0.3
+maxPsize                0.38
