chore: MiniGarden2 and Motherboard2

--- a/config/default.toml
+++ b/config/default.toml
@@ -31,6 +31,6 @@ rlc = "RLC40"
 "Boxer-IrishMan-Gladiator" = 0
 "ChessPieces-MovingCamera" = 0
 "Boys" = 1
-"Motherboard" = 1
-"MiniGarden" = 1
+"Motherboard2" = 1
+"MiniGarden2" = 1
 "HandTools" = 1
