--- a/config/default.toml
+++ b/config/default.toml
@@ -16,7 +16,7 @@ ffmpeg = "ffmpeg"
 encoder = "EncoderApp"
 preproc = "mca-preproc"
 postproc = "mca-postproc"
-rlc = "RLC40"
+convertor = "tlct"
 
 [QP.anchor]
 "TBD" = []
@@ -28,8 +28,6 @@ rlc = "RLC40"
 "NagoyaFujita" = 0
 "NagoyaOrigami" = 0
 "TempleBoatGiantR32" = 0
-"Boxer-IrishMan-Gladiator" = 0
-"ChessPieces-MovingCamera" = 0
 "Boys" = 1
 "Motherboard2" = 1
 "MiniGarden2" = 1
