--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lvccc"
-version = "0.9.0a3"
+version = "0.9.0"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["pillow", "matplotlib", "xxhash"]
