--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "lvccc"
-version = "0.8.0"
+version = "0.9.0a0"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
-dependencies = ["pillow", "matplotlib", "xxhash"]
+dependencies = ["yuvio", "pillow", "matplotlib"]
 requires-python = ">=3.10,<3.14"
 readme = "README.md"
 license = { text = "MIT" }
