--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lvccc"
-version = "0.9.1a0"
+version = "0.9.1a1"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["yuvio", "pillow", "matplotlib"]
@@ -23,12 +23,34 @@ dev-dependencies = ["pytest"]
 line-length = 120
 target-version = "py310"
 
-[tool.ruff.format]
-quote-style = "preserve"
-
 [tool.ruff.lint]
-select = ["F", "E", "W", "I", "UP", "YTT", "B", "A", "COM", "C4", "FA", "PIE", "PT", "RSE", "NPY", "PERF", "FURB"]
-ignore = ["E402", "E501", "COM812"]
+select = [
+  "F",
+  "E",
+  "W",
+  "I",
+  "UP",
+  "YTT",
+  "ASYNC",
+  "B",
+  "A",
+  "C4",
+  "FA",
+  "ICN",
+  "LOG",
+  "PIE",
+  "T20",
+  "PT",
+  "Q",
+  "RSE",
+  "SLOT",
+  "TC",
+  "PTH",
+  "NPY",
+  "PERF",
+  "FURB",
+]
+ignore = ["A005", "E402", "E501", "E266"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
