feat: md5 checksum

--- a/config/default.toml
+++ b/config/default.toml
@@ -1,20 +1,28 @@
 frames = 300
 views = 5
 
-default_pattern = "frame#%03d.png"
-
 [cases]
 vtm_types = ["AI", "RA"]
 seqs = []
 
-[path]
+[dir]
 input = ""
 output = ""
 
 [app]
-encoder = "EncoderApp"
+encoder = "EncoderAppStatic"
 proccessor = "mca"
 convertor = "tlct"
+
+[md5]
+Boxer-IrishMan-Gladiator = "4157fb44b0d1677eeac8503d027539d7"
+Boys = "0c6d66b9db48ba495e5a0542e49e1a8b"
+HandTools = "e14f96cf5b7e2bc0f7996de66b50fefe"
+MiniGarden2 = "c64416c611102a1bee420d9dd95460fa"
+Motherboard2 = "d9bb7f642f37d2cfc1a72a87f1684131"
+Fujita = "16ba32aa1b540722eebe9208c81bca53"
+Origami = "aa35eecc4e6658b8d40af8bb7fac670c"
+TempleBoatGiantR32 = "39b86ef99d81840381f4df23de129597"
 
 [QP.anchor]
 "TBD" = []
