refactor: rename cmd.sh to convert.sh

--- a/config/default.toml
+++ b/config/default.toml
@@ -16,7 +16,7 @@ convertor = "tlct"
 
 [md5]
 Boxer-IrishMan-Gladiator = "4157fb44b0d1677eeac8503d027539d7"
-Boys = "0c6d66b9db48ba495e5a0542e49e1a8b"
+Boys2 = "0c6d66b9db48ba495e5a0542e49e1a8b"
 HandTools = "e14f96cf5b7e2bc0f7996de66b50fefe"
 MiniGarden2 = "c64416c611102a1bee420d9dd95460fa"
 Motherboard2 = "d9bb7f642f37d2cfc1a72a87f1684131"
