--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "lvccc"
-version = "0.11.0a10"
+version = "0.11.0"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
-dependencies = ["yuvio", "pillow", "matplotlib"]
+dependencies = ["yuvio", "pillow", "numpy", "matplotlib"]
 requires-python = ">=3.12,<3.14"
 readme = "README.md"
 license = { text = "MIT" }
