--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [project]
 name = "lvccc"
-version = "0.11.1a5"
+version = "0.11.1a6"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
-dependencies = ["yuvio", "pillow", "numpy", "matplotlib"]
+dependencies = ["yuvio", "pillow", "numpy"]
 requires-python = ">=3.12,<3.14"
 readme = "README.md"
 license = { text = "MIT" }
+
+[project.optional-dependencies]
+export = ["matplotlib", "scipy"]
 
 [build-system]
 requires = ["hatchling"]
