--- a/config/default.toml
+++ b/config/default.toml
@@ -10,6 +10,7 @@ output = ""
 [app]
 ffmpeg = "ffmpeg"
 encoder = "EncoderAppStatic"
+decoder = "DecoderAppStatic"
 processor = "mca"
 convertor = "tlct"
 
