--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,8 @@ license = { text = "MIT" }
 export = ["matplotlib", "scipy"]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["lvccc"]
+requires = ["uv_build>=0.7.20,<0.8.0"]
+build-backend = "uv_build"
 
 [tool.uv]
 managed = true
@@ -42,7 +39,6 @@ select = [
   "ICN",
   "LOG",
   "PIE",
-  "T20",
   "PT",
   "Q",
   "RSE",
