--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,25 @@
 [project]
 name = "lvccc"
-version = "0.13.1a1"
+version = "0.13.1a2"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["yuvio", "pillow", "numpy"]
-requires-python = ">=3.12,<3.14"
+requires-python = ">=3.12,<3.15"
 readme = "README.md"
 license = { text = "MIT" }
 
 [project.optional-dependencies]
 export = ["matplotlib", "scipy"]
 
+[dependency-groups]
+dev = ["pytest"]
+
 [build-system]
-requires = ["uv_build>=0.8.11,<0.9.0"]
+requires = ["uv_build>=0.9.2,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv]
 managed = true
-dev-dependencies = ["pytest"]
 
 [tool.ruff]
 line-length = 120
