--- a/config/Fujita2/calib.cfg
+++ b/config/Fujita2/calib.cfg
@@ -1,4 +1,3 @@
-IsMultiFocus : 1
 IsKepler : 1
 LensletWidth : 2048
 LensletHeight : 2048
@@ -6,3 +5,4 @@ MIDiameter : 23.202295303345
 MLADirection : 1
 CentralMIOffsetX : 13.040943844572
 CentralMIOffsetY : -20.348051920159
+NearFocalLensType : 0
