--- a/config/TempleBoatGiantR32/calib.cfg
+++ b/config/TempleBoatGiantR32/calib.cfg
@@ -1,4 +1,3 @@
-IsMultiFocus : 1
 IsKepler : 1
 LensletWidth : 6464
 LensletHeight : 4852
@@ -6,3 +5,4 @@ MIDiameter : 37.154060363770
 MLADirection : 0
 CentralMIOffsetX : 11.602050584296
 CentralMIOffsetY : 8.678466513537
+NearFocalLensType : 0
