--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lvccc"
-version = "0.13.1a3"
+version = "0.13.1a4"
 description = "A crosscheck framework designed for LVC"
 authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["yuvio", "pillow", "numpy"]
@@ -9,13 +9,14 @@ readme = "README.md"
 license = { text = "MIT" }
 
 [project.optional-dependencies]
-export = ["matplotlib", "scipy"]
+fig = ["matplotlib"]
+bdbr = ["scipy"]
 
 [dependency-groups]
 dev = ["pytest"]
 
 [build-system]
-requires = ["uv_build>=0.9.18,<0.10.0"]
+requires = ["uv_build>=0.9.21,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv]
